Improve notifications layout and fix z-index

--- a/packages/admin/src/styles/_settings.scss
+++ b/packages/admin/src/styles/_settings.scss
@@ -72,6 +72,7 @@ $menu-padding: $menu-padding-ver $menu-padding-hor;
 // Z-Indices
 $z-index-dialog: 4000;
 $z-index-drag-overlay: 3000;
+$z-index-notifications: 2500;
 $z-index-header: 2000;
 $z-index-tippy: 750;
 $z-index-main-buttons: 500;
